[package]
name = "caca-blockish"
version = "0.0.1"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["dylib"] 
path = "src/lib.rs"

[[bin]]
name = "caca-blockish"
path = "src/bin.rs"

[dependencies]
blockish = { version = "0.0.2" }
redhook = { git = "https://github.com/yazgoo/redhook#07dc2275e02c5676293e90aeccb0660ccb79306a" }
gag = "0.1"
regex = "1.3"

crossterm = { version = "0.14" }

[profile.dev]
# Optimize by default so we don't need to remember to always pass in --release
opt-level = 3
