[package]
name = "blockish-caca"
version = "0.0.1"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["dylib"] 
path = "src/lib.rs"

[[bin]]
name = "blockish-caca"
path = "src/bin.rs"

[dependencies]
blockish = { version = "0.0.2" }
redhook = { git = "https://github.com/yazgoo/redhook#07dc2275e02c5676293e90aeccb0660ccb79306a" }
gag = "0.1"
crossterm = { version = "0.14" }
blockish-player = "0.0.1"

[profile.dev]
# Optimize by default so we don't need to remember to always pass in --release
opt-level = 3
