[package]
name = "blockish-caca"
version = "0.0.4"
authors = ["yazgoo <yazgoo@gmail.com>"]
edition = "2018"
license = "MIT"
description = "play videos in the terminal with unicode chars"
readme = "README.md"
homepage = "https://github.com/yazgoo/blockish-caca"
repository = "https://github.com/yazgoo/blockish-caca"
keywords = ["unicode", "video", "player", "libcaca"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["dylib"] 
path = "src/lib.rs"

[[bin]]
name = "blockish-caca"
path = "src/bin.rs"

[dependencies]
blockish = { version = "0.1.2" }
redhook = { version = "1.0" }
gag = "0.1"
crossterm = { version = "0.27" }
blockish-player = "0.0.2"

[profile.dev]
# Optimize by default so we don't need to remember to always pass in --release
opt-level = 3
